--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +7,7 @@
     android:background="@color/backgroundColor"
     tools:context="com.verkhovskygroup.HexBinApp.MainActivity">
 
-    <EditText
+    <com.verkhovskygroup.HexBinApp.EditText
         android:id="@+id/editTextBin"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -25,7 +25,7 @@
         app:layout_constraintStart_toStartOf="@+id/editTextDec"
         app:layout_constraintTop_toBottomOf="@+id/editTextDec" />
 
-    <EditText
+    <com.verkhovskygroup.HexBinApp.EditText
         android:id="@+id/editTextDec"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -42,7 +42,7 @@
         app:layout_constraintStart_toEndOf="@+id/Sign"
         app:layout_constraintTop_toBottomOf="@+id/editTextHex" />
 
-    <EditText
+    <com.verkhovskygroup.HexBinApp.EditText
         android:id="@+id/editTextHex"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -360,4 +360,4 @@
         app:layout_constraintStart_toStartOf="@+id/But3"
         app:layout_constraintTop_toBottomOf="@+id/But3" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
