--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,6 +4,11 @@
     <item
         android:id="@+id/mybutton"
         android:title=""
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
+        />
+    <item
+        android:id="@+id/settings"
+        android:title="@string/support_developer"
+        app:showAsAction="never"
         />
 </menu>
