Modifying process of theme changing

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,7 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/mybutton"
+        android:id="@+id/theme_button"
+        android:icon="@drawable/theme_icon"
         android:title=""
         app:showAsAction="ifRoom"
         />
