--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,26 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:colorBackground">@color/colorBackground</item>
         <item name="actionBarStyle">@style/CustomActionBar</item>
-        <item name="android:colorBackground">@color/backgroundColor</item>
-    </style>
-    <style name="AppThemeDark" parent="Theme.AppCompat">
-        <item name="colorPrimary">@color/colorPrimaryDarker</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDarkDarker</item>
-        <item name="colorAccent">@color/colorAccentDarker</item>
-        <item name="android:colorBackground">@color/HomeDark</item>
-        <item name="actionBarStyle">@style/CustomActionBarDarker</item>
         <item name="android:textColorPrimary">@color/text_color_primary</item>
         <item name="android:textColorSecondary">@color/text_color_secondary</item>
     </style>
 
     <style name="CustomActionBar" parent="Widget.AppCompat.Light.ActionBar.Solid.Inverse">
         <item name="background">@drawable/actionbar_layer_list</item>
-    </style>
-    <style name="CustomActionBarDarker" parent="Widget.AppCompat.Light.ActionBar.Solid.Inverse">
-        <item name="background">@drawable/actionbar_layer_list_dark</item>
     </style>
 </resources>
